# oxirag

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  TODO.md
.cargo/: config.toml
.config/: nextest.toml
benches/: benchmarks.rs
examples/: candle_slm_example.rs  lora_training_example.rs
src/: circuit_breaker.rs  config.rs  connection_pool.rs  error.rs  hybrid_search.rs  index_management.rs  lib.rs  load_testing.rs  memory.rs  metrics.rs  pipeline.rs  pipeline_debug.rs  quantization.rs  query_builder.rs  query_expansion.rs  relevance_feedback.rs  reranker.rs  retry.rs  simd_similarity.rs  streaming.rs  types.rs  wasm.rs
src/distillation/: candle_lora.rs  collector.rs  detector.rs  feature.rs  hotswap.rs  lora.rs  losses.rs  metrics.rs  mod.rs  progressive.rs  registry.rs  teacher_student.rs  tracker.rs  traits.rs  trigger.rs  types.rs
src/hidden_states/: cache.rs  extractor.rs  mod.rs  reuse.rs  traits.rs  types.rs
src/layer1_echo/: README.md  ann.rs  filter.rs  mod.rs  multi_vector.rs  similarity.rs  similarity_simd.rs  traits.rs
src/layer1_echo/embedding/: cache.rs  candle.rs  mod.rs
src/layer1_echo/storage/: memory.rs  mod.rs
src/layer2_speculator/: README.md  calibration.rs  candle_slm.rs  hidden_state_speculator.rs  hidden_states.rs  mod.rs  slm.rs  speculative.rs  streaming.rs  traits.rs  verification.rs
src/layer3_judge/: README.md  claim_extractor.rs  explanation.rs  incremental.rs  mod.rs  normalizer.rs  oxiz_verifier.rs  traits.rs
src/layer3_judge/dependency_parser/: mod.rs  tests.rs
src/layer4_graph/: memory.rs  mod.rs  traits.rs  traversal.rs  types.rs
src/layer4_graph/extractor/: entity.rs  mod.rs  relationship.rs
src/prefix_cache/: fingerprint.rs  hierarchy.rs  invalidation.rs  mod.rs  paging.rs  persistent.rs  store.rs  traits.rs  types.rs
